--- a/mycoolpage.html
+++ b/mycoolpage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<link rel="stylesheet" href="Second Challenge.css">
+<link rel="stylesheet" href="coolcs.css">
 
 <head>
   <meta charset="utf-8">
